# cupcake_vanilla

./: .env.build.example  .env.demo.example  .env.test.example  .flake8  .gitignore  .pre-commit-config.yaml  .pypiignore  INSTALL.md  LICENSE  README.md  __init__.py  build-frontend.sh  build-multiarch.sh  caprover-one-click.yml  captain-definition  captain-definition-frontend  captain-definition-i386  captain-definition-lims-frontend  captain-definition-transcribe-worker  captain-definition-worker  docker-compose.alpine-i386.yml  docker-compose.ccv.yml  docker-compose.cloudflared.yml  docker-compose.db-dump.yml  docker-compose.demo-vanilla-ng.yml  docker-compose.demo.yml  docker-compose.e2e.yml  docker-compose.initial-dump.yml  docker-compose.test.yml  generate_ssl_certs.sh  manage.py  pyproject.toml  requirements.txt  start_pglite.py  test_annotation_data_field.py  test_auto_reorder.py
.github/workflows/: build-portable.yml  ci.yml
backups/: .gitignore
ccc/: __init__.py  admin.py  annotation_chunked_upload.py  apps.py  auth_backends.py  auth_urls.py  authentication.py  chunked_upload.py  consumers.py  jwt_utils.py  mixins.py  models.py  notification_service.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py  viewsets.py  websocket_routing.py
ccc/device_token/: auth.py  model.py  permissions.py  serializer.py  viewsets.py
ccc/migrations/: 0001_initial.py  0002_alter_annotation_annotation_type_and_more.py  0003_delete_annotationbooking.py  0004_historicallabgrouppermission_labgrouppermission.py  0005_historicallabgroup_parent_group_and_more.py  0006_add_can_process_jobs_permission.py  0007_historicallabgroup_allow_process_jobs_and_more.py  0008_siteconfig_booking_deletion_window_minutes.py  0009_remove_instrument_annotation_type.py  0010_move_asynctaskstatus_to_ccc.py  0011_siteconfig_ui_features.py  0012_alter_siteconfig_ui_features.py  0013_siteconfig_whisper_cpp_model.py  0014_siteconfig_cached_available_models.py  0015_add_management_command_execution.py  0016_backuplog.py  0017_add_device_token.py  0018_add_plugin_model.py  0019_plugin_lifecycle_status_plugin_progress_data_and_more.py  0020_deletion_log.py
ccc/plugin/: auth.py  model.py  permissions.py  serializer.py  viewset.py
ccc/tests/: test_annotations.py  test_appliance.py  test_base.py  test_chunked_upload.py  test_deletion_log.py  test_device_token.py  test_plugin.py  test_plugin_manager.py
ccc/view_modules/: __init__.py  auth_views.py
ccm/: admin.py  annotation_chunked_upload.py  apps.py  communication.py  consumers.py  forms.py  models.py  notification_service.py  permissions.py  routing.py  serializers.py  signals.py  urls.py  viewsets.py  widgets.py
ccm/migrations/: 0001_initial.py  0002_initial.py  0003_instrumentannotation_maintenancelogannotation_and_more.py  0004_historicalinstrumentpermission_instrumentpermission.py  0005_historicalinstrumentjob_lab_group_and_more.py  0006_externalcontact_created_at_and_more.py  0007_historicalinstrument_allow_overlapping_bookings_and_more.py  0008_historicalreagentaction_session_and_more.py  0009_historicalinstrumentjob_project_and_more.py  0010_historicalinstrumentjob_metadata_table_template_and_more.py  0011_remove_instrumentjob_staff_annotations_and_more.py  0012_instrumentusagejobannotation.py  0013_instrumentjobannotation_role.py  0014_historicalstoredreagent_molecular_weight_and_more.py
ccm/tasks/: __init__.py  transcribe_tasks.py
ccm/tests/: __init__.py  test_admin.py  test_admin_images.py  test_annotation_permissions.py  test_annotation_relationships.py  test_api_serializers_viewsets.py  test_booking_annotation_metadata_merge.py  test_ccsc_integration.py  test_communication_integration.py  test_instrument_job_annotation_role.py  test_instrument_permissions.py  (+7 more)
ccmc/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  turn_credentials.py  urls.py  viewsets.py  websocket_utils.py
ccrv/: admin.py  annotation_chunked_upload.py  apps.py  consumers.py  export_utils.py  models.py  notification_service.py  routing.py  serializers.py  signals.py  urls.py  viewsets.py  websocket_utils.py
ccsc/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  viewsets.py
ccv/: __init__.py  admin.py  apps.py  async_views.py  cache_utils.py  chunked_upload.py  chunked_upload_client.py  consumers.py  excel_launch_utils.py  excel_launch_views.py  middleware.py  models.py  notification_service.py  ontology_registry.py  permissions.py  routing.py  sdrf_defaults.py  serializers.py  signals.py  task_models.py  tasks.py  tests.py  urls.py  utils.py  views.py  viewsets.py
coturn/: turnserver.conf
cupcake_vanilla/: asgi.py  asgi_electron.py  asgi_wails.py  settings.py  settings_electron.py  settings_test.py  settings_wails.py  urls.py  wsgi.py
dockerfiles/: Dockerfile  Dockerfile-alpine-i386  Dockerfile-caprover-frontend  Dockerfile-caprover-lims-frontend  Dockerfile-certbot-init  Dockerfile-certbot-test  Dockerfile-db-dump  Dockerfile-debian-i386  Dockerfile-demo  Dockerfile-demo-frontend  Dockerfile-demo-frontend-only  Dockerfile-demo-frontend-vanilla-ng  Dockerfile-demo-nginx  Dockerfile-demo-nginx-vanilla-ng  Dockerfile-frontend  Dockerfile-nginx  Dockerfile-nginx-ccv  Dockerfile-rqworker  Dockerfile-ssl  Dockerfile-transcribe-worker  download-whisper-models.sh  entrypoint-demo.sh  nginx-caprover.conf  nginx-demo-frontend.conf  nginx-demo-vanilla-ng.conf  nginx-demo.conf
nginx-conf/: ccv.ome.quest-with-frontend.conf  ccv.ome.quest.conf  cupcake-vanilla.conf
scripts/: create-demo-db-dump.sh  create-initial-db-dump.sh  create-initial-wails-db.sh  init-test-db.sh  reset-test-env.sh  start-test-env.sh  stop-test-env.sh
systemd/: cupcake-demo-restart.service  cupcake-demo-restart.timer
tests/: factories.py  test_extensibility.py  test_frontend_features.py  test_models_comprehensive.py  test_ontology_validation.py  test_pool_updates.py  test_rq_tasks.py  test_sdrf_integration.py  test_serializers_comprehensive.py  test_template_matching.py  test_views_comprehensive.py
(+112 files in other folders)
